amb el modul de 3 L

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html class="no-js" lang="ca">
   <head>
       <meta charset="utf-8">
@@ -116,15 +116,13 @@
             </div>
         </section>
 
-
-
         <!-- 3-PIMES i Startups -->
-        <section id="pimes" class="clearfix">
-          <div class="menu-container">
-            <div class="marc-foto-4 image4"></div>
-            <div class="marc-foto-4 image5"></div>
-            <div class="marc-foto-4 image6"></div>
-            <div class="rectangle-horitzontal"></div>
+        <section id="pimes">
+          <div class="contenidor-center">
+            <div class="bloc image4"></div>
+            <div class="bloc image4"></div>
+            <div class="bloc image4"></div>
+            <div class="marc-foto-5 image6"></div>
           </div>
           <h5>Els nostres serveis per les</h5>
           <h2 id="prova_boto">PIMES i Startups</h2>
@@ -135,20 +133,20 @@
             <ul class="serveis">
               <li class="llista"><span class="blue-dash">–</span>Constitució Societats</li>
               <li class="llista"><span class="blue-dash">–</span>Assessorament fiscal i comptable</li>
-              <li class="llista"><span class="blue-dash">–</span>Elaboració comptabilitat i presentació llibres comptables al Registre Mercantil</li>
-              <li class="llista"><span class="blue-dash">–</span>Confecció i presentació liquidacions trimestrals (111, 115, 303, 349,..)</li>
-              <li class="llista"><span class="blue-dash">–</span>Confecció i presentació resums anuals (180,190, 347, 390,..)</li>
-              <li class="llista"><span class="blue-dash">–</span>Confecció i presentació Impost de Societats i Comptes anuals.</li>
+              <li class="llista"><span class="blue-dash">–</span>Resums anuals (180,190, 347, 390,..)</li>
+              <li class="llista"><span class="blue-dash">–</span>Impost de Societats i Comptes anuals</li>
+              <li class="llista"><span class="blue-dash">–</span>Redacció de contractes mercantils</li>
+              <li class="llista"><span class="blue-dash">–</span>Informes econòmics, financers i Plans de Viabilitat</li>
             </ul>
           </div>
           <div class="contenidor-dreta">   
             <ul class="serveis">  
-              <li class="llista"><span class="blue-dash">–</span>Confecció i presentació recursos Agència Tributària</li>
-              <li class="llista"><span class="blue-dash">–</span>Assistència Inspeccions Tributàries</li>
-              <li class="llista"><span class="blue-dash">–</span>Estudi i elaboració informes econòmics-financers i Plans de Viabilitat</li>
-              <li class="llista"><span class="blue-dash">–</span>Redacció contractes mercantils</li>
+              <li class="llista"><span class="blue-dash">–</span>Contractes de treball, nòmines i seguros socials</li>
+              <li class="llista"><span class="blue-dash">–</span>Liquidacions trimestrals (111, 115, 303, 349,..)</li>
+              <li class="llista"><span class="blue-dash">–</span>Presentació de recursos a l’Agència Tributària</li>
+              <li class="llista"><span class="blue-dash">–</span>Assistència en Inspeccions Tributàries</li>
               <li class="llista"><span class="blue-dash">–</span>Assessorament laboral</li>
-              <li class="llista"><span class="blue-dash">–</span>Confecció contractes de treball, nòmines, Seguros Socials</li>
+              <li class="llista"><span class="blue-dash">–</span>Presentació de llibres comptables al Registre Mercantil</li>
             </ul>
           </div>
             
