Avançant amb la L

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="titolseccio">
             <h1>Necessites una Gestoria?</h1>
             <hr class="stroke">
-            <h3>Descobreix que podem fer pel teu negoci</h3>  
+            <h3>Descobreix tot el que podem fer pel teu negoci</h3>  
           </div>
           <div>
             <!-- <a href="javascript:void(0)" id="contacte_link">Contacte</a> -->
@@ -88,13 +88,14 @@
         </section>
 
        <!-- 2-Autònoms i Freelance -->
-        <section id="autonoms" class="clearfix">
+        <section id="autonoms">
           <div class="contenidor-esquerra">
                 <div class="esquerra">
                   <h5>Els nostres serveis pels</h5>
                   <h2>Autònoms i Freelances</h2>
                   <div class="stroke-titol"></div>
                   <h3>Treballem perquè els professionals<br>puguin centrar-se en les seves activitats</h3>
+                  </div>
                   <ul class="serveis">
                     <li class="llista"><span class="blue-dash">–</span>Gestions alta i baixa d'autònoms</li>
                     <li class="llista"><span class="blue-dash">–</span>Gestions alta i baixa d'IAE</li>
@@ -104,12 +105,12 @@
                     <li class="llista"><span class="blue-dash">–</span>Confecció i presentació de resums anuals</li>
                     <li class="llista"><span class="blue-dash">–</span>Assistència en inspeccions tributàries</li>
                   </ul>
-                </div>
+                
             </div>
             <div class="contenidor-dreta">                          
-              <div class="marc-foto-2 image2">
+              <div class="marc-foto-2">
               </div>
-              <div class="marc-foto-3 image3">
+              <div class="marc-foto-3">
               </div>
               <!-- <div class="marc-foto-1 forma2">
               </div> -->
@@ -118,14 +119,17 @@
 
         <!-- 3-PIMES i Startups -->
         <section id="pimes">
-          <div class="contenidor-center">
-            <div class="bloc image4"></div>
-            <div class="bloc image4"></div>
-            <div class="bloc image4"></div>
-            <div class="marc-foto-5 image6"></div>
+          <div class="top-fotos">
+            <div class="contenidor-centre">
+              <div class="bloc image4"></div>
+              <div class="bloc image5"></div>  
+              <div class="bloc image6"></div>    
+            </div>
+            <div class="rectangle-gris"></div>
           </div>
+
           <h5>Els nostres serveis per les</h5>
-          <h2 id="prova_boto">PIMES i Startups</h2>
+          <h2>PIMES i Startups</h2>
           <div class="stroke-titol"></div>
           <h3>Assessorem als emprenedors que comencen i a la petita empresa</h3>
 
@@ -148,8 +152,7 @@
               <li class="llista"><span class="blue-dash">–</span>Assessorament laboral</li>
               <li class="llista"><span class="blue-dash">–</span>Presentació de llibres comptables al Registre Mercantil</li>
             </ul>
-          </div>
-            
+          </div>    
         </section>
 
           <!-- 4-Gran Empresa -->
@@ -190,7 +193,7 @@
             <div class="contenidor-esquerra">
                <div class="titolseccio">
                 <h5>Els nostres serveis per les</h5>
-                <h2 id="prova_boto">Entitats Socials</h2>
+                <h2>Entitats Socials</h2>
                 <div class="stroke-titol"></div>
                 <h3>Treballem per persones<br>que ajuden persones</h3>
               </div>
@@ -216,46 +219,45 @@
           </div>
         </section>
 
-
-
-      <!-- Contacte -->
-
+    <!-- Contacte -->
       <section id="contacte">
-        <div class="wrapper1280">
-          <div class="titolseccio">
-            <h2 class="info">Informa't, truca al 93 368 37 80</h2>
-            <hr class="stroke-blau">
-            <h3 class="info">Obert de dilluns a divendres de 9:00 a 14:00 i de 16:00 a 20:00</h3>
-          </div>
-        <div class="clearfix">  
-          <div class="form">
-            <form action="demo_form.asp">
-              Nom:<input type="text" name="Nom" value="Escriu el teu nom...">
-              <br>
-              Telèfon:<input type="text" name="Telefon" value="Escriu el teu telèfon...">
-              <br>
-              Mail<input type="text" name="Mail" value="Escriu el teu mail...">
-              <br>
-              Consulta<input type="textarea" name="Consulta"  value="Explican's la teva consulta...">
-              <br>
-              <input type="checkbox" name="avis-legal" value="Accepto">Accepto les condicions de l'<a href="avislegal.html" class="link">avís legal</a>
-              <br>
-              <input class="boto-blau" type="submit" value="Enviar el formulari">
-             </form>
-           </div> 
-           <div class="mapa">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.63671938081!2d2.144450815059026!3d41.40369510294764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a2a058ea8e07%3A0xb5fac3a5b57f0243!2sJosep+Mar%C3%ADa+Perell%C3%B3+I+Associats+S+L!5e0!3m2!1sca!2ses!4v1458822770676" width="400" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
-              <div class="transports">
-                <ul>
-                  <li><img src="tren-icon.png" alt="">Plaça Molina</li>
-                  <li><img src="metro-icon.png" alt="">L3 - Lesseps</li>
-                  <li><img src="bus-icon.png" alt="">H6 / V15</li>
-                </ul>
+            <div class="contenidor-centre">
+              <h2 class="info">Informa't, truca al 93 368 37 80</h2>
+              <hr class="stroke-titol">
+              <h3 class="info">Obert de dilluns a divendres de 9:00 a 14:00 i de 16:00 a 20:00</h3>
+            </div>
+            <div class="contenidor-esquerra">
+              <div class="clearfix">  
+                <div class="form">
+                  <form action="demo_form.asp">
+                    Nom:<input type="text" name="Nom" value="Escriu el teu nom...">
+                    <br>
+                    Telèfon:<input type="text" name="Telefon" value="Escriu el teu telèfon...">
+                    <br>
+                    Mail<input type="text" name="Mail" value="Escriu el teu mail...">
+                    <br>
+                    Consulta<input type="textarea" name="Consulta"  value="Explican's la teva consulta...">
+                    <br>
+                    <input type="checkbox" name="avis-legal" value="Accepto">Accepto les condicions de l'<a href="avislegal.html" class="link">avís legal</a>
+                    <br>
+                    <input class="boto-blau" type="submit" value="Enviar el formulari">
+                   </form>
+                </div>                           
+             </div>
+            <div class="contenidor-dreta">    
+              <div class="mapa">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.63671938081!2d2.144450815059026!3d41.40369510294764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a2a058ea8e07%3A0xb5fac3a5b57f0243!2sJosep+Mar%C3%ADa+Perell%C3%B3+I+Associats+S+L!5e0!3m2!1sca!2ses!4v1458822770676" width="400" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <div class="transports">
+                  <ul>
+                    <li><img src="tren-icon.png" alt="">Plaça Molina</li>
+                    <li><img src="metro-icon.png" alt="">L3 - Lesseps</li>
+                    <li><img src="bus-icon.png" alt="">H6 / V15</li>
+                  </ul>
+                </div>
+              </div>                      
             </div>
           </div>
-          </div>              
-        </section>
-      </main> 
+      </section>
 
      <!-- Footer -->
       <footer>
