--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <main class="serveis-clients">
       <!-- 1-Particulars -->
-        <section id="particulars" class="clearfix">
+        <section id="particulars">
             <div class="contenidor-esquerra">                         
               <div class="marc-foto-1 image1">
               </div>
@@ -95,8 +95,8 @@
                   <h2>Autònoms i Freelances</h2>
                   <div class="stroke-titol"></div>
                   <h3>Treballem perquè els professionals<br>puguin centrar-se en les seves activitats</h3>
-                  </div>
-                  <ul class="serveis">
+                </div>
+                <ul class="serveis">
                     <li class="llista"><span class="blue-dash">–</span>Gestions alta i baixa d'autònoms</li>
                     <li class="llista"><span class="blue-dash">–</span>Gestions alta i baixa d'IAE</li>
                     <li class="llista"><span class="blue-dash">–</span>Assessorament fiscal i comptable</li>
@@ -104,7 +104,7 @@
                     <li class="llista"><span class="blue-dash">–</span>Confecció i presentació liquidacions trimestrals (IVA,IRPF...)</li>
                     <li class="llista"><span class="blue-dash">–</span>Confecció i presentació de resums anuals</li>
                     <li class="llista"><span class="blue-dash">–</span>Assistència en inspeccions tributàries</li>
-                  </ul>
+                </ul>
                 
             </div>
             <div class="contenidor-dreta">                          
@@ -156,21 +156,19 @@
         </section>
 
           <!-- 4-Gran Empresa -->
-        <section id="gran_empresa">
-          <div class="container clearfix">
-            <div class="contenidor-esquerra">                          
-              <div class="marc-foto-1 image1">
+        <section id="gran-empresa">
+          <div class="contenidor-esquerra">                         
+              <div class="marc-foto-4">
               </div>
-              <div class="marc-foto-1 forma1">
+              <div class="marc-foto-5">
               </div>
             </div>
-
             <div class="contenidor-dreta">
                <div class="titolseccio">
                 <h5>Els nostres serveis per la</h5>
                 <h2 id="prova_boto">Mitjana i Gran Empresa</h2>
                 <div class="stroke-titol"></div>
-                <h3>Utilitzem la nostra experiència per trobar la millor estratègia</h3>
+                <h3>Utilitzem la nostra experiència<br>per trobar la millor estratègia</h3>
               </div>
               <ul class="serveis">
                 <li class="llista"><span class="blue-dash">–</span>Assessorament fiscal i comptable</li>
@@ -188,33 +186,28 @@
 
         
        <!-- 5-Entitats Socials -->
-        <section id="entitats_socials">
-          <div class="container clearfix">
+        <section id="entitats-socials">
             <div class="contenidor-esquerra">
-               <div class="titolseccio">
-                <h5>Els nostres serveis per les</h5>
-                <h2>Entitats Socials</h2>
-                <div class="stroke-titol"></div>
-                <h3>Treballem per persones<br>que ajuden persones</h3>
-              </div>
+              <div class="esquerra">
+                  <h5>Els nostres serveis per les</h5>
+                  <h2>Entitats Socials</h2>
+                  <div class="stroke-titol"></div>
+                  <h3>Ens agrada treballar per persones<br>que ajuden altres persones</h3>
+              </div> 
               <ul class="serveis">
-                <li class="llista"><span class="blue-dash">–</span>Elaboració comptabilitat</li>
-                <li class="llista"><span class="blue-dash">–</span>Assessorament fiscal,comptable i laboral</li>
-                <li class="llista"><span class="blue-dash">–</span>Confecció i presentació liquidacions trimestrals</li>
-                <li class="llista"><span class="blue-dash">–</span>Confecció i presentació resums anuals</li>
-                <li class="llista"><span class="blue-dash">–</span>Redacció informes financers</li>
+                <li class="llista"><span class="blue-dash">–</span>Elaboració de comptabilitat</li>
+                <li class="llista"><span class="blue-dash">–</span>Assessorament fiscal, comptable i laboral</li>
+                <li class="llista"><span class="blue-dash">–</span>Confecció i presentació de liquidacions trimestrals</li>
+                <li class="llista"><span class="blue-dash">–</span>Confecció i presentació de resums anuals</li>
+                <li class="llista"><span class="blue-dash">–</span>Redacció d'informes financers</li>
                 <li class="llista"><span class="blue-dash">–</span>Presentació de recursos a l’Agència Tributària</li>
                 <li class="llista"><span class="blue-dash">–</span>Assistència en Inspeccions Tributàries</li>
                 <li class="llista"><span class="blue-dash">–</span>Contractes de treball, nòmines i seguros socials</li>
               </ul>
             </div>
             <div class="contenidor-dreta">                          
-              <div class="marc-foto-2 image2">
-              </div>
-              <div class="marc-foto-2 image3">
-              </div>
-              <div class="marc-foto-2 forma2">
-              </div>
+              <div class="marc-foto-2"></div>
+              <div class="rectangle-gris-vertical"></div>
             </div>
           </div>
         </section>
