una mica de KAOS

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
               </ul>
             </div>
             <div class="contenidor-dreta">                          
-              <div class="marc-foto-2"></div>
+              <div class="marc-foto-6"></div>
               <div class="rectangle-gris-vertical"></div>
             </div>
         </section>
@@ -215,20 +215,6 @@
             </div>
             <div class="formulari">
               <div class="camps-formulari">
-                  <!-- <form action="demo_form.asp">
-                      <label for="name">Nom</label>
-                      <input name="Nom" type="text" placeholder="Escriu el teu nom...">
-                      <br>
-                      Telèfon:<input type="text" name="Telefon" value="Escriu el teu telèfon...">
-                      <br>
-                      Mail<input type="text" name="Mail" value="Escriu el teu mail...">
-                      <br>
-                      Consulta<input type="textarea" name="Consulta"  value="Explican's la teva consulta...">
-                      <br>
-                      <input type="checkbox" name="avis-legal" value="Accepto">Accepto les condicions de l'<a href="avislegal.html" class="link">avís legal</a>
-                      <br>
-                      <input class="boto-blau" type="submit" value="Enviar el formulari">
-                   </form> -->
                    <form class=“?” action="demo_form.asp">
                       <fieldset>
                           <div class="cell">
@@ -248,7 +234,7 @@
 
                           <div class="cell">
                               <label for=“comments”>Comentaris</label>
-                              <input id="comments" type="text" placeholder="Explican's la teva consulta....">
+                              <input id="comments" type="textarea" placeholder="Explican's la teva consulta....">
                           </div>
 
                           <div class="cell">
