--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </div>
           <div>
             <!-- <a href="javascript:void(0)" id="contacte_link">Contacte</a> -->
-            <a class="cta" href="javascript:void(0)" id="contacte_link">Parlem</a>
+            <a class="cta" href="javascript:void(0)" id="contacte_link">Parlem'ne</a>
           </div>
       </div>
     </header>
@@ -202,7 +202,7 @@
               </ul>
             </div>
             <div class="contenidor-dreta">                          
-              <div class="marc-foto-6"></div>
+              <div class="marc-foto-2"></div>
               <div class="rectangle-gris-vertical"></div>
             </div>
         </section>
@@ -219,40 +219,63 @@
                       <fieldset>
                           <div class="cell">
                               <label for="name">Nom</label>
-                              <input id="name" type="text" placeholder="Escriu el teu nom...">
+                              <input class="input-style" id="name" type="text" placeholder="Escriu el teu nom...">
                           </div>
 
                           <div class="cell">
                               <label for=“telephone”>Telèfon</label>
-                              <input id="telephone" type=“text” placeholder="Escriu el teu telèfon...">
+                              <input class="input-style"  id="telephone" type=“text” placeholder="Escriu el teu telèfon...">
                           </div>
 
                           <div class="cell">
                               <label for="email">Correu electrònic</label>
-                              <input id="email" type="email" placeholder="Escriu el teu mail...">
+                              <input class="input-style"  id="email" type="email" placeholder="Escriu el teu mail...">
                           </div>
 
                           <div class="cell">
                               <label for=“comments”>Comentaris</label>
-                              <input id="comments" type="textarea" placeholder="Explican's la teva consulta....">
+                              <input class="input-style" id="comments" type="text-area" placeholder="Explican's la teva consulta....">
                           </div>
 
                           <div class="cell">
-                              <label for="cb" class="checkbox">
-                                  <input id="cb" type="checkbox">Accepto els termes i condicions
-                              </label>
-                              <button type="submit" class=“cta”>Envia la teva consulta</button>
+                              <input class="input-style-2" id="cb" type="checkbox" name="condicions" value="Accepto el termes i condicions">
+                              <label class="label2" for="cb">Accepto els <a href="termes.html">termes i les condicions</span></label>
+                          </div>
+
+                          <div class="cell">
+                            <input class="cta" type="button" onclick="" value="Envia la teva consulta">
                           </div>
                       </fieldset>
                   </form>
               </div>     
               <div class="localitzacio">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.63671938081!2d2.144450815059026!3d41.40369510294764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a2a058ea8e07%3A0xb5fac3a5b57f0243!2sJosep+Mar%C3%ADa+Perell%C3%B3+I+Associats+S+L!5e0!3m2!1sca!2ses!4v1458822770676" width="100%" height="340" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.63671938081!2d2.144450815059026!3d41.40369510294764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a2a058ea8e07%3A0xb5fac3a5b57f0243!2sJosep+Mar%C3%ADa+Perell%C3%B3+I+Associats+S+L!5e0!3m2!1sca!2ses!4v1458822770676" width="100%" height="357" frameborder="0" style="border:0" allowfullscreen></iframe>
                     <div class="transports">
                       <ul>
-                        <li><img src="tren-icon.png" alt="">Plaça Molina</li>
-                        <li><img src="metro-icon.png" alt="">L3 - Lesseps</li>
-                        <li><img src="bus-icon.png" alt="">H6 / V15</li>
+                        <li>
+                          <div class="llista_icon">
+                            <img src="../img/MAP_PIN.svg" alt="marcador del mapa">
+                          </div>
+                          <div class="llista_text_1"><p>Carrer de Saragossa, 95<br>08006 Barcelona</p></div>
+                        </li>
+                        <li>
+                          <div class="llista_icon">
+                            <img src="../img/FCC.svg" alt="logo ferrocarrils catalans">
+                          </div>
+                          <div class="llista_text"><p>Plaça Molina</p></div>
+                        </li>
+                        <li>
+                          <div class="llista_icon">
+                            <img src="../img/metro.svg" alt="logo metro de Barcelona">
+                          </div>
+                          <div class="llista_text"><p>L3 - Lesseps</p></div>
+                        </li>
+                        <li>
+                          <div class="llista_icon">
+                            <img src="../img/bus.svg" alt="logo bus de Barcelona">
+                          </div>
+                          <div class="llista_text"><p>H6 / V15</p></div>
+                        </li>
                       </ul>
                     </div>
               </div>                    
@@ -262,18 +285,22 @@
   </main>
      <!-- Footer -->
       <footer>
-        <div class="socialmedia">
-          <a href=""><img src="img/facebookicon.jpg" alt="Facebook Perelló i Associats"></a>
-          <a href=""><img src="img/linkedinicon.jpg" alt="Linkedin Perelló i Associats"></a>
-        </div>
-        <img src="logo-footer.png" alt="Logo Perelló i Associats" class="logofooter">
-        <div class="idioma">
-          <ul>
-            <li><a href="">CAT</a></li>
-            <li><a href="">CAST</a></li>
-          </ul>
-        </div>   
-        <div class="copyright">©2016 - Perelló i Associats s.l. - Tots els drets reservats</div> 
+       <div class="serveis-clients">
+          <div class="contenidor-centre">
+              <div class="socialmedia">
+                <a href=""><img src="../img/facebook.svg" alt="Facebook Perelló i Associats"></a>
+                <a href=""><img src="../img/linkedin.svg" alt="Linkedin Perelló i Associats"></a>
+              </div>
+              <div class="logo-footer">
+                <img src="../img/logo_blanc.svg" alt="Logo Perelló i Associats" class="logofooter">
+              </div>
+              <div class="idioma">
+                  <a href="">Ver en Castellano</a>
+              </div>   
+          </div>
+          <div class="contenidor-centre">
+                <div class="copyright">©2016 - Perelló i Associats s.l. - Tots els drets reservats</div> 
+          </div>
       </footer>
 
      <!-- js --> 
