FALTA ENTITATS SOCIALS PER ACABAR LA L

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
             <div class="contenidor-esquerra">                         
               <div class="marc-foto-1 image1">
               </div>
-              <div class="marc-forma-1 forma1">
+              <div class="marc-forma-1">
+                <img class="cercle" src="../img/cercle.svg" alt="element del fons">
               </div>
             </div>
             <div class="contenidor-dreta">
@@ -112,8 +113,7 @@
               </div>
               <div class="marc-foto-3 image3">
               </div>
-              <!-- <div class="marc-foto-1 forma2">
-              </div> -->
+              <img  class="rombo" src="../img/rombo.svg" alt="element del fons">
             </div>
         </section>
 
@@ -134,7 +134,7 @@
           <h3>Assessorem als emprenedors que comencen i a la petita empresa</h3>
 
           <div class="contenidor-esquerra">
-            <ul class="serveis">
+            <ul class="serveis1">
               <li class="llista"><span class="blue-dash">–</span>Constitució Societats</li>
               <li class="llista"><span class="blue-dash">–</span>Assessorament fiscal i comptable</li>
               <li class="llista"><span class="blue-dash">–</span>Resums anuals (180,190, 347, 390,..)</li>
@@ -160,8 +160,10 @@
           <div class="contenidor-esquerra">                         
               <div class="marc-foto-4 image7">
               </div>
+               <img  class="rectangle-distorsionat" src="../img/rectangle_distorsionat.svg" alt="element del fons">
               <div class="marc-foto-5 image8">
               </div>
+               <img  class="rectangle-distorsionat" src="../img/rectangle_distorsionat.svg" alt="element del fons">
             </div>
             <div class="contenidor-dreta">
                <div class="titolseccio">
@@ -202,7 +204,7 @@
               </ul>
             </div>
             <div class="contenidor-dreta">                          
-              <div class="marc-foto-2"></div>
+              <div class="marc-foto-5"></div>
               <div class="rectangle-gris-vertical"></div>
             </div>
         </section>
@@ -268,13 +270,13 @@
                           <div class="llista_icon">
                             <img src="../img/metro.svg" alt="logo metro de Barcelona">
                           </div>
-                          <div class="llista_text"><p>L3 - Lesseps</p></div>
+                          <div class="llista_text"><p>L3 Lesseps</p></div>
                         </li>
                         <li>
                           <div class="llista_icon">
                             <img src="../img/bus.svg" alt="logo bus de Barcelona">
                           </div>
-                          <div class="llista_text"><p>H6 / V15</p></div>
+                          <div class="llista_text"><p>22 / V17  Gran de Gràcia-Lesseps</p></div>
                         </li>
                       </ul>
                     </div>
