casi acabada la L
Falta acabar el formulari i triar la foto per a les entintas socials

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
               <li><a href="javascript:void(0)" id="pimes_link">PIMES i Startups</a></li>
               <li><a href="javascript:void(0)" id="gran_empresa_link">Grans Empreses</a></li>
               <li><a href="javascript:void(0)" id="entitats_socials_link">Entitats Socials</a></li>
+              <li><a class="cta-menu" href="javascript:void(0)" id="contacte_link">Contacte</a></li>
             </ul>
           </nav>
         </div> 
@@ -204,7 +205,7 @@
               </ul>
             </div>
             <div class="contenidor-dreta">                          
-              <div class="marc-foto-5"></div>
+              <div class="marc-foto-6 image9"></div>
               <div class="rectangle-gris-vertical"></div>
             </div>
         </section>
@@ -241,11 +242,11 @@
 
                           <div class="cell">
                               <input class="input-style-2" id="cb" type="checkbox" name="condicions" value="Accepto el termes i condicions">
-                              <label class="label2" for="cb">Accepto els <a href="termes.html">termes i les condicions</span></label>
+                              <label class="label2" for="cb">Accepto els <a href="termes.html">termes i les condicions</a></label>
                           </div>
 
                           <div class="cell">
-                            <input class="cta" type="button" onclick="" value="Envia la teva consulta">
+                            <input class="cta" type="button" onclick="" value="Enviar">
                           </div>
                       </fieldset>
                   </form>
@@ -290,15 +291,15 @@
        <div class="serveis-clients">
           <div class="contenidor-centre">
               <div class="socialmedia">
-                <a href=""><img src="../img/facebook.svg" alt="Facebook Perelló i Associats"></a>
-                <a href=""><img src="../img/linkedin.svg" alt="Linkedin Perelló i Associats"></a>
+                <a href=""><!-- <img src="../img/facebook.svg" alt="Facebook Perelló i Associats"> --></a>
+                <a href=""><!-- <img src="../img/linkedin.svg" alt="Linkedin Perelló i Associats"> --></a>
               </div>
               <div class="logo-footer">
                 <img src="../img/logo_blanc.svg" alt="Logo Perelló i Associats" class="logofooter">
               </div>
-              <div class="idioma">
+              <!-- <div class="idioma">
                   <a href="">Ver en Castellano</a>
-              </div>   
+              </div>   --> 
           </div>
           <div class="contenidor-centre">
                 <div class="copyright">©2016 - Perelló i Associats s.l. - Tots els drets reservats</div> 
