--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="titolseccio">
             <h1>Necessites una Gestoria?</h1>
             <hr class="stroke">
-            <h3>Descobreix tot el que podem fer pel teu negoci</h3>  
+            <h3>Descobreix què podem fer pel teu negoci</h3>  
           </div>
           <div>
             <!-- <a href="javascript:void(0)" id="contacte_link">Contacte</a> -->
@@ -76,12 +76,12 @@
                 <h5>Els nostres serveis pels</h5>
                 <h2>Particulars</h2>
                 <div class="stroke-titol"></div>
-                <h3>Oferim serveis per fer-te la vida més fàcil.<br>Més de 200 particulars ja confien en nosaltres!</h3>
+                <h3>Serveis per fer-te la vida més fàcil.<br>200 particulars ja confien en nosaltres!</h3>
                 <ul class="serveis">
                   <li class="llista"><span class="blue-dash">–</span>Declaració de la renta i del patrimoni</li>
                   <li class="llista"><span class="blue-dash">–</span>Herències</li>
                   <li class="llista"><span class="blue-dash">–</span>Donacions</li>
-                  <li class="llista"><span class="blue-dash">–</span>Estudis de la tributació en operacions de compra / venta</li>
+                  <li class="llista"><span class="blue-dash">–</span>Estudis de tributació en operacions de compra/venta</li>
                   <li class="llista"><span class="blue-dash">–</span>Contractes i nòmines per empleades de la llar</li>
                   <li class="llista"><span class="blue-dash">–</span>Prestacions de la seguretat social i jubilacions</li>
                   <li class="llista"><span class="blue-dash">–</span>Assistència en inspeccions tributàries</li>
