--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@
               <li><a href="javascript:void(0)" id="pimes_link">PIMES i Startups</a></li>
               <li><a href="javascript:void(0)" id="gran_empresa_link">Grans Empreses</a></li>
               <li><a href="javascript:void(0)" id="entitats_socials_link">Entitats Socials</a></li>
-              <li><a class="cta-menu" href="javascript:void(0)" id="contacte_link">Contacte</a></li>
+              <!-- <li><a class="cta-menu" href="javascript:void(0)" id="contacte_link">Contacte</a></li> -->
             </ul>
+            <div class="cta-nav">
+              <a class="cta-contacte" href="javascript:void(0)" id="contacte_link">Contacte</a>
+              <div class="menu_icon"></div>
+            </div>   
           </nav>
         </div> 
       </div>
@@ -302,15 +306,15 @@
               </div>   --> 
           </div>
           <div class="contenidor-centre">
-                <div class="copyright">©2016 - Perelló i Associats s.l. - Tots els drets reservats</div> 
+                <div class="copyright">©2017 - Perelló i Associats s.l. - Tots els drets reservats</div> 
           </div>
       </footer>
 
      <!-- js --> 
       <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
       <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
       <script src="js/plugins.js"></script>
       <script src="js/main.js"></script>
+
   </body>
 </html>
